feat: :sparkles: Rework that add edit for report as admin, add search and sort in AllReport page
