# backend/src/notification/dto/update-anomaly-notification.dto.ts
@@ -1,17 +1,9 @@
 import { CreateAnomalyNotificationDto } from "./create-anomaly-notification.dto";
-import { IsOptional, IsEnum } from "class-validator";
-import { ApiProperty, PartialType } from "@nestjs/swagger";
-import { AnomalyNotificationStatus } from "@prisma/client";
+import { OmitType, PartialType } from "@nestjs/swagger";
 
 export class UpdateAnomalyNotificationDto extends PartialType(
-  CreateAnomalyNotificationDto,
-) {
-  @IsOptional()
-  @IsEnum(AnomalyNotificationStatus)
-  @ApiProperty({
-    description: "Le nouveau statut de la notification d'anomalie",
-    enum: AnomalyNotificationStatus,
-    required: true,
-  })
-  status?: AnomalyNotificationStatus;
-}
+  OmitType(
+    CreateAnomalyNotificationDto,
+    ["applicationId"] as const,
+  ),
+) {}
